font redone for static constructors